<resources>
    <string name="app_name">RickYMortyAPI</string>
    <string name="selecciona_una_temporada">Selecciona una temporada:</string>
    <string name="bienvenido_rickymorty_api">Bienvenido RickYMorty API</string>
    <string name="temporadas">Temporadas</string>
    <string name="ajustes">Ajustes</string>
    <string name="modo_oscuro">Modo Oscuro:</string>
    <string name="volver">Volver</string>
    <string name="imagen_del_personaje">Imagen del personaje</string>
    <string name="personajes">Personajes</string>
    <string name="imagen_de_morty">imagen de morty</string>
    <string name="imagen_de_jerry">imagen de jerry</string>
    <string name="imagen_de_summer">imagen de summer</string>
    <string name="imagen_de_beth">imagen de beth</string>
    <string name="imagen_de_rick">imagen de rick</string>
    <string name="imagen_titulo">imagen titulo</string>
    <string name="imagen_temporadas">imagen temporadas</string>
    <string name="imagen_personajes">imagen personajes</string>
    <string name="imagen_detalles">imagen detalles</string>
    <string name="caracteristicas_episodio">caracteristicas episodio</string>
</resources>