<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PersonajesActivity">

    <ImageView
        android:id="@+id/ivTituloPersonajes"
        android:layout_width="241dp"
        android:layout_height="138dp"
        android:layout_marginEnd="84dp"
        android:contentDescription="@string/imagen_personajes"
        android:src="@drawable/personaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivCaracteristicas"
        android:layout_width="305dp"
        android:layout_height="259dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/caracteristicas_episodio"
        android:src="@drawable/caracteristicasepisodio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivTituloPersonajes" />

    <TextView
        android:id="@+id/tvNombreEpisodio"
        android:layout_width="131dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewPersonaje"
        app:layout_constraintEnd_toStartOf="@+id/tvEpisodio"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTituloPersonajes"
        app:layout_constraintVertical_bias="0.641"
        tools:text="Nombre Episodio" />

    <TextView
        android:id="@+id/tvEpisodio"
        android:layout_width="154dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewPersonaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTituloPersonajes"
        app:layout_constraintVertical_bias="0.644"
        tools:text="Episodio" />

    <Button
        android:id="@+id/btVolverPersonaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/volver"
        app:layout_constraintEnd_toStartOf="@+id/ivTituloPersonajes"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPersonaje"
        android:layout_width="411dp"
        android:layout_height="530dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>